Fix spacing to be better optimized for mobile and desktop

--- a/RandomQuoteGenerator/style.css
+++ b/RandomQuoteGenerator/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .margin {
-	margin-top: 60px;
+	margin-top: 10px;
 	margin-right: 10%;
 	margin-left: 10%;
 }
